--- a/app/src/main/res/layout/activity_new_especialista.xml
+++ b/app/src/main/res/layout/activity_new_especialista.xml
@@ -1,9 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.dehcors.teleconsultorapp.NewEspecialista">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/esp_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/new_especialista"
+        android:id="@+id/include"/>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/newEspec_floatSair"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/colorSecondaryAccent"
+        app:srcCompat="@drawable/ic_logout_variant_white_18dp"/>
+
+    <ImageView
+        android:id="@+id/nEsp_logo"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom|left"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="top|right"
+        app:srcCompat="@drawable/logo1"/>
+
+    </android.support.design.widget.CoordinatorLayout>
